--- a/style/main.css
+++ b/style/main.css
@@ -25,24 +25,38 @@ html, body { position: absolute; height: 100%; min-width: 100%; }
 * html .clearfix { zoom: 1; }
 *:first-child+html .clearfix { zoom: 1; }
 
-textarea, input[type=email], input[type=password], input[type=text], input[type=url] { display: inline-block; height: 29px; margin: 0; padding-left: 8px; background: #fff; border: 1px solid #d9d9d9; border-top: 1px solid #c0c0c0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; #width: 100%; }
-textarea:hover, input[type=email]:hover, input[type=password]:hover, input[type=text]:hover, input[type=url]:hover { border: 1px solid #b9b9b9; border-top: 1px solid #a0a0a0; -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); }
-textarea:focus, input[type=email]:focus, input[type=password]:focus, input[type=text]:focus, input[type=url]:focus { outline: none; border: 1px solid #4d90fe; -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); }
-input[type=email][disabled=disabled], input[type=password][disabled=disabled], input[type=text][disabled=disabled], input[type=url][disabled=disabled] { border: 1px solid #e5e5e5; background: #f5f5f5; }
-input[type=email][disabled=disabled]:hover, input[type=password][disabled=disabled]:hover, input[type=text][disabled=disabled]:hover, input[type=url][disabled=disabled]:hover { -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
-input[type=checkbox], input[type=radio] { -webkit-appearance: none; -moz-appearance: none; appearance: none; outline: none; width: 13px; height: 13px; margin: 0; padding: 0; cursor: pointer; vertical-align: middle; background: #fff; border: 1px solid #dcdcdc; -webkit-border-radius: 1px; -moz-border-radius: 1px; border-radius: 1px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; position: relative; }
+textarea, input[type=password], input[type=text], .input { display: inline-block; border-radius: 2px; height: 29px; margin: 0; padding-left: 8px; background: #fff; border: 1px solid #d9d9d9; border-top: 1px solid #c0c0c0; box-sizing: border-box; #width: 100%; }
+textarea:hover, .input:hover, input[type=password]:hover, input[type=text]:hover { border: 1px solid #b9b9b9; border-top: 1px solid #a0a0a0; box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); }
+textarea:focus, .input:focus, input[type=password]:focus, input[type=text]:focus { outline: none; border: 1px solid #4d90fe; box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); }
+.input[disabled=disabled], input[type=password][disabled=disabled], input[type=text][disabled=disabled] { border: 1px solid #e5e5e5; background: #f5f5f5; }
+.input[disabled=disabled]:hover, input[type=password][disabled=disabled]:hover, input[type=text][disabled=disabled]:hover { box-shadow: none; }
+input[type=checkbox], input[type=radio] { -webkit-appearance: none; -moz-appearance: none; appearance: none; outline: none; width: 13px; height: 13px; margin: 0; padding: 0; cursor: pointer; vertical-align: middle; background: #fff; border: 1px solid #dcdcdc; border-radius: 1px; box-sizing: border-box; position: relative; }
 input[type=checkbox]:active, input[type=radio]:active { border-color: #c6c6c6; background: #ebebeb; }
-input[type=checkbox]:hover { border-color: #c6c6c6; -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1); -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.1); box-shadow: inset 0 1px 1px rgba(0,0,0,0.1); }
-input[type=radio] { -webkit-border-radius: 1em; -moz-border-radius: 1em; border-radius: 1em; width: 15px; height: 15px; }
+input[type=checkbox]:hover { border-color: #c6c6c6; box-shadow: inset 0 1px 1px rgba(0,0,0,0.1); }
+input[type=radio] { border-radius: 1em; width: 15px; height: 15px; }
 input[type=checkbox]:checked, input[type=radio]:checked { background: #fff; }
-input[type=radio]:checked::after { content: ''; display: block; position: relative; top: 3px; left: 3px; width: 7px; height: 7px; background: #666; -webkit-border-radius: 1em; -moz-border-radius: 1em; border-radius: 1em; }
+input[type=radio]:checked::after { content: ''; display: block; position: relative; top: 3px; left: 3px; width: 7px; height: 7px; background: #666; border-radius: 1em; }
 input[type=checkbox]:checked::after { content: url(checkmark.png); display: block; position: absolute; top: -6px; left: -5px; }
 input[type=checkbox]:focus { outline: none; border-color: #4d90fe; }
 textarea { min-height: 120px; #height: 120px; padding: 5px; }
-input[type=submit], button, .btn { cursor: pointer; background: #2244ff; border: none; color: #fff; padding: 0 10px 0 15px; height: 30px; line-height: 30px; letter-spacing: 3px; -webkit-appearance: none; -moz-appearance: none; appearance: none; outline: none; display: inline-block; }
-input[type=submit]:hover, button:hover, .btn:hover { background: #5577ff; text-decoration: none; }
-input[type=email].form-error, input[type=password].form-error, input[type=text].form-error, input[type=url].form-error { border: 1px solid #dd4b39; }
-.btn:active { color: #fff; }
+.input.form-error, input[type=password].form-error, input[type=text].form-error { border: 1px solid #dd4b39; }
+
+.btn, button, input[type=submit] { display: inline-block; min-width: 54px; letter-spacing: 1px; text-align: center; color: #555; font-size: 12px; font-weight: bold; height: 30px; padding: 0 7px 0 8px; line-height: 29px; border-radius: 2px; transition: all 0.218s; border: 1px solid #dcdcdc; border: 1px solid rgba(0,0,0,0.1); background-color: #f5f5f5; background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1); background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1); background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1); background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1); background-image: linear-gradient(top,#f5f5f5,#f1f1f1); -webkit-user-select: none; -moz-user-select: none; user-select: none; cursor: pointer; outline: none; }
+button, input[type=submit] { height: 30px; line-height: 30px; vertical-align: bottom; margin: 0; }
+*+html button, *+html input[type=submit] { overflow: visible; }
+.btn:hover, button:active, input[type=submit]:active { border: 1px solid #c6c6c6; color: #333; text-decoration: none; transition: all 0.0s; background-color: #f8f8f8; background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1); background-image: -moz-linear-gradient(top,#f8f8f8,#f1f1f1); background-image: -ms-linear-gradient(top,#f8f8f8,#f1f1f1); background-image: -o-linear-gradient(top,#f8f8f8,#f1f1f1); background-image: linear-gradient(top,#f8f8f8,#f1f1f1); box-shadow: 0 1px 1px rgba(0,0,0,0.1); }
+.btn:active, button:active, input[type=submit]:active { background-color: #f6f6f6; background-image: -webkit-linear-gradient(top,#f6f6f6,#f1f1f1); background-image: -moz-linear-gradient(top,#f6f6f6,#f1f1f1); background-image: -ms-linear-gradient(top,#f6f6f6,#f1f1f1); background-image: -o-linear-gradient(top,#f6f6f6,#f1f1f1); background-image: linear-gradient(top,#f6f6f6,#f1f1f1); box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); }
+.btn:visited, button:visited, input[type=submit]:visited { color: #666; }
+.btn.submit, input[type=submit] { border: 1px solid #3079ed; color: #fff; text-shadow: 0 1px rgba(0,0,0,0.1); background-color: #4d90fe; background-image: -webkit-linear-gradient(top,#4d90fe,#4787ed); background-image: -moz-linear-gradient(top,#4d90fe,#4787ed); background-image: -ms-linear-gradient(top,#4d90fe,#4787ed); background-image: -o-linear-gradient(top,#4d90fe,#4787ed); background-image: linear-gradient(top,#4d90fe,#4787ed); }
+.btn.submit:hover, input[type=submit]:hover { border: 1px solid #2f5bb7; color: #fff; text-shadow: 0 1px rgba(0,0,0,0.3); background-color: #357ae8; background-image: -webkit-linear-gradient(top,#4d90fe,#357ae8); background-image: -moz-linear-gradient(top,#4d90fe,#357ae8); background-image: -ms-linear-gradient(top,#4d90fe,#357ae8); background-image: -o-linear-gradient(top,#4d90fe,#357ae8); background-image: linear-gradient(top,#4d90fe,#357ae8); }
+.btn.submit:active, input[type=submit]:active { box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); }
+.btn.red { border: 1px solid transparent; color: #fff; text-shadow: 0 1px rgba(0,0,0,0.1); text-transform: uppercase; background-color: #d14836; background-image: -webkit-linear-gradient(top,#dd4b39,#d14836); background-image: -moz-linear-gradient(top,#dd4b39,#d14836); background-image: -ms-linear-gradient(top,#dd4b39,#d14836); background-image: -o-linear-gradient(top,#dd4b39,#d14836); background-image: linear-gradient(top,#dd4b39,#d14836); }
+.btn.red:hover { border: 1px solid #b0281a; color: #fff; text-shadow: 0 1px rgba(0,0,0,0.3); background-color: #c53727; background-image: -webkit-linear-gradient(top,#dd4b39,#c53727); background-image: -moz-linear-gradient(top,#dd4b39,#c53727); background-image: -ms-linear-gradient(top,#dd4b39,#c53727); background-image: -o-linear-gradient(top,#dd4b39,#c53727); background-image: linear-gradient(top,#dd4b39,#c53727); box-shadow: 0 1px 1px rgba(0,0,0,0.2); }
+.btn.red:active { border: 1px solid #992a1b; background-color: #b0281a; background-image: -webkit-linear-gradient(top,#dd4b39,#b0281a); background-image: -moz-linear-gradient(top,#dd4b39,#b0281a); background-image: -ms-linear-gradient(top,#dd4b39,#b0281a); background-image: -o-linear-gradient(top,#dd4b39,#b0281a); background-image: linear-gradient(top,#dd4b39,#b0281a); box-shadow: inset 0 1px 2px rgba(0,0,0,0.3); }
+.btn.red:visited, .btn.submit:visited { color: #fff; }
+.btn img, button img { display: inline-block; margin: 4px 0 0; opacity: .55; vertical-align: middle; }
+.btn:hover img, button:hover img { opacity: .72; }
+.btn:active img, button:active img { opacity: 1; }
 
 .float-left { float: left; }
 .float-right { float: right; }
@@ -51,8 +65,6 @@ input[type=email].form-error, input[type=password].form-error, input[type=text].
 #page_login h1 { color: #000; padding: 2px 0 10px 8px; font-size: 26px; }
 #page_login { background: url(background.jpg) no-repeat 50% 50%; background-size: 100% 100%; }
 #page_login .center-box { box-shadow: #9c9c9c 0 0 150px; background: white; border-radius: 10px; padding: 30px; }
-input[type=submit], button, .btn { background: #2c3e50; padding: 0 15px 0 18px; height: 30px; font-size: 14px; border-radius: 20px; box-shadow: #2c3e50 0 0 2px; margin: 3px 2px; line-height: 28px; border: 1px solid transparent; }
-input[type=submit]:hover, button:hover, .btn:hover { background: #1e2a36; border-color: #161f29; box-shadow: #2c3e50 0 0 4px; }
 #page_login .side-bar { position: absolute; top: 0; left: 0; height: 100%; background: #272a25; width: 85px; border-radius: 10px 0 0 10px; }
 #page_login .main { margin-left: 85px; height: 100%; }
 #page_login .icon { background: url(member.png) no-repeat 50% 50%; display: block; height: 85px; width: 85px; }
@@ -130,7 +142,7 @@ div.select:hover { border-color: #bdbdbd; }
 .fwin .close:hover { background-position: 0 100%; }
 .fwin h3 { font-size: 18px; padding: 0 5px; margin: 0 25px 0 0; height: 32px; line-height: 28px; cursor: move; }
 .fwin .fcontent { line-height: 20px; margin: 0 -5px; padding: 15px 10px 10px; border-top: 1px solid #dedede; }
-.fwin .btns { margin: 15px -10px -5px; border-top: 1px solid #dedede; padding: 10px 10px 0; }
+.fwin .btns { margin: 15px -10px -5px; border-top: 1px solid #dedede; padding: 3px 10px 0; }
 .fwin.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .3s; -webkit-animation: hidefwin .3s; -moz-animation: hidefwin .3s; }
 @keyframes showfwin{ from { opacity: 0; transform: scale(1.1, 1.1); } to { opacity: 1; transform: scale(1, 1); } }
 @-webkit-keyframes showfwin{ from { opacity: 0; -webkit-transform: scale(1.1, 1.1); } to { opacity: 1; -webkit-transform: scale(1, 1); } }
