--- a/style/main.css
+++ b/style/main.css
@@ -107,11 +107,11 @@ button, input[type=submit] { height: 30px; line-height: 30px; vertical-align: bo
 .copyright { margin-top: 65px; margin-bottom: 0; color: #4c4c4c; text-align: center; font-size: 12px; padding-bottom: 2em; }
 .copyright a { color: #159; }
 #page_login .copyright { margin-top: 150px; }
-.loading-icon { color: #000; background: #fff; position: fixed; top: 50%; right: 50%; padding: 20px 50px; border: 1px solid #dedede; border-radius: 5px; line-height: 20px; height: 20px; width: 70px; font-size: 12px; cursor: default; margin: -30px -85px; text-align: center; z-index: 20; animation: showfwin .25s; -webkit-animation: showfwin .25s; -moz-animation: showfwin .25s; }
-.loading-icon.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .25s; -webkit-animation: hidefwin .25s; -moz-animation: hidefwin .25s; box-shadow: #bcbcbc 0 0 100px; pointer-events: none; }
+.loading-icon { color: #000; background: #fff; position: fixed; top: 50%; right: 50%; padding: 20px 50px; border: 1px solid #dedede; border-radius: 5px; line-height: 20px; height: 20px; width: 70px; font-size: 12px; cursor: default; margin: -30px -85px; text-align: center; z-index: 20; animation: showfwin .25s; -webkit-animation: showfwin .25s; -moz-animation: showfwin .25s; box-shadow: #9c9c9c 0 0 100px; box-shadow: rgba(72, 72, 72, 0.3) 0 0 100px; }
+.loading-icon.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .25s; -webkit-animation: hidefwin .25s; -moz-animation: hidefwin .25s; pointer-events: none; }
 .loading-icon img { padding: 2px 5px 2px 0; float: left; }
-.cover { animation: showfwin .5s; -webkit-animation: showfwin .5s; -moz-animation: showfwin .5s; position: absolute; position: fixed; width: 100%; height: 100%; z-index: 15; background-color: rgba(0, 0, 0, 0.3); }
-.cover.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .5s; -webkit-animation: hidefwin .5s; -moz-animation: hidefwin .5s; pointer-events: none; }
+.cover { animation: showfwin 1s; -webkit-animation: showfwin 1s; -moz-animation: showfwin 1s; position: absolute; position: fixed; width: 100%; height: 100%; z-index: 15; background-color: rgba(0, 0, 0, 0.3); }
+.cover.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin 1s; -webkit-animation: hidefwin 1s; -moz-animation: hidefwin 1s; pointer-events: none; }
 .menubtn { display: none; width: 20px; line-height: 20px; height: 20px; position: absolute; top: 0; right: 0; padding: 15px; z-index: 10; }
 .menubtn:hover { background-color: #2c3335; }
 .menubtn p { line-height: 2px; height: 2px; margin: 3px 2px 4px; background: #dedede; text-indent: -999px; overflow: hidden; }
