--- a/template/traditional/style/main.css
+++ b/template/traditional/style/main.css
@@ -3,6 +3,7 @@ html, body, div, h1, h2, h3, h4, h5, h6, p, img, dl, dt, dd, ol, ul, li, table, 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 blockquote { margin: 0; }
 html { font: 81.25% "Microsoft YaHei", arial, helvetica, sans-serif; background: #fff; color: #333; line-height: 1; direction: ltr; word-break: break-all; }
+body { overflow-y: scroll; }
 a { color: #15c; text-decoration: none; }
 a:active { color: #d14836; }
 a:hover { text-decoration: underline; }
@@ -18,10 +19,7 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; }
 .hidden { display: none; }
 
 html, body { position: absolute; height: 100%; min-width: 100%; }
-.wrapper { position: relative; min-height: 100%; background: #000; }
-
-.wrapper { transition: filter 3s ease; backface-visibility: hidden; }
-.wrapper.blur { -moz-filter: blur(5px); -webkit-filter: blur(5px); -ms-filter: blur(5px); filter: blur(5px); }
+.wrapper { position: relative; min-height: 100%; background: #3c3c3c; }
 
 .clearfix:after { visibility: hidden; display: block; font-size: 0; content: '.'; clear: both; height: 0; }
 * html .clearfix { zoom: 1; }
@@ -79,23 +77,25 @@ a.btn { height: 28px; }
 #page_login .main p { margin-left: 15px; color: #676767; line-height: 26px; }
 #page_login .login-info input { width: 90%; border-radius: 2px; border: 1px solid #cdcdcd; }
 
-#page_index h1 { margin: 0; padding: 0 15px; height: 25px; }
+#page_index h1 { margin: 0 -15px; padding: 0 15px 0.46em; height: 25px; }
 .extra_title { font-size: 14px; margin-left: 20px; }
 #append_parent { color: #000; z-index: 20; }
 .btns { height: 36px; line-height: 36px; text-align: right; padding: 0 10px; }
 .btns * { margin-left: 5px; }
 .btns .float-left { margin-left: -10px; }
 .center-box { position: relative; width: 500px; top: 125px; margin: 0 auto; background: #f5f5f5; padding: 10px 15px; box-shadow: 0 0 5px #ababab; }
-.avatar { position: absolute; z-index: 7; top: 0; right: 0; height: 50px; line-height: 50px; background: url('member.png') no-repeat 90% 50%; background-size: 32px; padding: 0 50px 0 10px; cursor: pointer; color: #fff; }
+.main-wrapper { margin: 0 -15px -10px; overflow: hidden; min-height: 500px; }
+.main-box { position: relative; top: 35px; width: 80%; margin: 0 auto; background: #ffffff; padding: 10px 15px; box-shadow: 0 0 5px #ababab; }
+.avatar { position: absolute; z-index: 7; top: 0; right: 0; height: 50px; line-height: 50px; background: url('member.png') no-repeat 90% 50%; background-size: 32px; padding: 0 50px 0 10px; cursor: pointer; }
 .avatar img { position: absolute; width: 40px; top: 5px; right: 5px; border-radius: 20px; box-shadow: 0 0 3px #dedede; }
 .avatar:hover { background-color: #2c3335; }
 #member-menu { position: absolute; z-index: 3; right: 0; background: #1b2223; width: 200px; box-shadow: 0 0 25px #999; }
 #member-menu a { color: #dedede; }
 #member-menu li:hover { background: #2c3335; }
 #member-menu li:hover a { color: #fff; }
-.sidebar { width: 230px; position: absolute; top: 50px; bottom: 0; left: 0; }
+.sidebar { width: 230px; float: left; margin-bottom: -99999px; padding-bottom: 99999px; }
 .sidebar p { text-align: center; margin-bottom: 0; padding-bottom: .75em; }
-.main-content { position: absolute; top: 50px; bottom: 0; left: 230px; right: 0; box-shadow: -5px 0 65px #181818; font-size: 11px; text-align: right; padding: 10px; overflow: auto; background: #fff; }
+.main-content { margin: 0 0 -10px 230px; padding: 10px; box-shadow: -5px 0 65px #181818; position: relative; font-size: 11px; text-align: right; }
 .main-content>div { min-height: 500px; margin-bottom: 1em; font-size: 13px; text-align: left; }
 .menu { margin: 0; }
 .menu li { margin: 0; padding: 0; }
@@ -108,12 +108,12 @@ a.btn { height: 28px; }
 .menu_switch_user:hover .del{ display: block; }
 
 .template-list {}
-.template-list li { float: left; width: 170px; height: 135px; text-align:center; padding:10px 10px 0 10px; margin: 5px; border-radius:5px; cursor:pointer; border: 1px solid transparent; }
+.template-list li { float: left; width: 170px; height: 135px; text-align:center; padding:10px 10px 0 10px; margin: 5px; border-radius:5px; cursor:pointer; }
 .template-list li:hover{ background: #dedede; }
 .template-list li img { width: 170px; height: 110px; border:1px solid #dedede; border-radius:3px; }
 .template-list li.current {background:-webkit-linear-gradient(top,#4d90fe,#357ae8); color:#fff; border: 1px solid #2f5bb7; }
 
-.copyright { margin-top: 15px; margin-bottom: 5px; text-align: right; font-size: 12px; }
+.copyright { margin-top: 65px; margin-bottom: 0; color: #4c4c4c; text-align: center; font-size: 12px; padding-bottom: 2em; }
 .copyright a { color: #159; }
 #page_login .copyright { margin-top: 150px; }
 .loading-icon { color: #000; background: #fff; position: fixed; top: 50%; right: 50%; padding: 20px 50px; border: 1px solid #dedede; border-radius: 5px; line-height: 20px; height: 20px; width: 70px; font-size: 12px; cursor: default; margin: -30px -85px; text-align: center; z-index: 20; animation: showfwin .25s; -webkit-animation: showfwin .25s; -moz-animation: showfwin .25s; box-shadow: #9c9c9c 0 0 100px; box-shadow: rgba(72, 72, 72, 0.3) 0 0 100px; }
@@ -134,9 +134,10 @@ a.btn { height: 28px; }
 .baidu_account p { line-height: 36px; margin-bottom: 0; }
 .baidu_account { margin: 5px 15px 15px; }
 
+#page_index { background: url(background.jpg); background-size: 100% 100%; background-attachment: fixed; color: #e5e5e5; }
 #page_index .main-box { box-shadow: 0 0 65px #222; width: 85%; }
 #page_index .sidebar { background: #232b2d; color: #556366; }
-#page_index h1 { background: #1b2224; color: #fff; padding: 0 15px; height: 50px; line-height: 50px; z-index: 5; position: relative; }
+#page_index h1 { background: #1b2224; color: #fff; padding: 0 15px; margin: -10px -15px 0; height: 50px; line-height: 50px; z-index: 5; position: relative; }
 #page_index .main-content { color: #000; }
 
 div.select { position: relative; display: inline; padding: 3px 5px; margin: 2px 5px; text-align: center; border: 1px solid #dedede; border-radius: 3px; cursor: pointer; }
@@ -147,12 +148,12 @@ div.select:hover { border-color: #bdbdbd; }
 .dropdown li { color: #000; height: 32px; line-height: 32px; padding: 0 15px; border-bottom: 1px solid #dedede; margin-bottom: -1px; overflow: hidden; cursor: default; }
 .dropdown li:hover { color: #fff; background: #15f; }
 
-.fwin { animation: showfwin .3s; -webkit-animation: showfwin .3s; -moz-animation: showfwin .3s; position: absolute; position: fixed; max-width: 600px; min-width: 320px; z-index: 50; background-color: #fefefe; border: 1px solid #efefef; border-radius: 5px; padding: 10px 5px 5px; box-shadow: #cdcdcd 0 0 20px; }
-.fwin .close { display: none; }
-.fwin h3 { font-size: 20px; text-align: center; margin: -10px -5px 0; height: 42px; line-height: 42px; cursor: move; }
-.fwin .fcontent { text-align: center; line-height: 36px; padding: 10px; cursor: default; }
-.fwin .fcontent * { text-align: left; line-height: 20px; }
-.fwin .btns { text-align: right; margin: 5px; padding: 0; }
+.fwin { animation: showfwin .3s; -webkit-animation: showfwin .3s; -moz-animation: showfwin .3s; position: absolute; position: fixed; width: 400px; z-index: 50; background-color: #f5f5f5; border: 1px solid #cdcdcd; border-radius: 5px; padding: 5px; box-shadow: #9c9c9c 0 0 100px; box-shadow: rgba(200, 200, 200, 0.3) 0 0 100px; }
+.fwin .close { display: block; overflow: hidden; position: relative; float: right; right: 3px; top: 3px; text-indent: -999px; width: 0; height: 0; background: url(close.gif); padding: 10px; cursor: pointer; }
+.fwin .close:hover { background-position: 0 100%; }
+.fwin h3 { font-size: 18px; padding: 0 5px; margin: 0 25px 0 0; height: 32px; line-height: 28px; cursor: move; }
+.fwin .fcontent { line-height: 20px; margin: 0 -5px; padding: 15px 10px 10px; border-top: 1px solid #dedede; }
+.fwin .btns { margin: 15px -10px -5px; border-top: 1px solid #dedede; padding: 3px 10px 0; }
 .fwin.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .3s; -webkit-animation: hidefwin .3s; -moz-animation: hidefwin .3s; pointer-events: none; }
 @keyframes showfwin{ from { opacity: 0; transform: scale(1.1, 1.1); } to { opacity: 1; transform: scale(1, 1); } }
 @-webkit-keyframes showfwin{ from { opacity: 0; -webkit-transform: scale(1.1, 1.1); } to { opacity: 1; -webkit-transform: scale(1, 1); } }
@@ -161,17 +162,22 @@ div.select:hover { border-color: #bdbdbd; }
 @-webkit-keyframes hidefwin{ from { opacity: 1; -webkit-transform: scale(1, 1); } to { opacity: 0; -webkit-transform: scale(1.1, 1.1); } }
 @-moz-keyframes hidefwin{ from { opacity: 1; -moz-transform: scale(1, 1); } to { opacity: 0; -moz-transform: scale(1.1, 1.1); } }
 @media (max-width: 550px){
+	.wrapper { padding: 0 5px 0 10px; }
 	#page_login .icon { float: left; }
+	#page_index h1 { margin: -10px -5px 0; }
+	#page_index .main-box { width: 94%; }
 	#page_login .side-bar { width: 100%; height: 85px; border-radius: 10px 10px 0 0; overflow: hidden; }
 	#page_login .side-bar li { padding: 0; float: left; width: 85px; height: 85px; line-height: 85px; }
 	#page_login .side-bar li.current { color: #fff; background: url(triangle.mobile.png) no-repeat 50% 100%; }
 	#page_login .main { margin-top: 85px; margin-left: 0; width: 100%; }
 	.center-box { top: 20px; width: 95%; box-sizing: border-box; }
+	.main-box { top: 15px; width: auto; padding: 10px 5px 0; }
+	.main-wrapper { margin: 0 -5px; min-height: 0; }
 	.copyright { margin-top: 35px; font-size: 11px; }
 	#page_login .copyright { margin-top: 40px; }
-	.sidebar, #page_index .sidebar { display: none; border: none; left: auto; right: 0; bottom: auto; width: 220px; z-index: 5; background: #1b2223; }
+	.sidebar, #page_index .sidebar { display: none; float: none; padding: 0; margin: 0; border: none; position: absolute; right: 0; width: 220px; z-index: 5; background: #1b2223; }
 	.menu li a { color: #dedede; }
-	.main-content { left: 0; box-shadow: none; }
+	.main-content { padding: 10px; margin: -1px 0 0 -5px; float: none; width: auto; margin-left: -1px; box-shadow: none; }
 	.avatar { right: 50px; }
 	.menubtn { display: block; }
 	.main-content input[type=text], .main-content input[type=password] { width: 90%; }
