登陆界面版权居中显示

--- a/template/default/style/main.css
+++ b/template/default/style/main.css
@@ -115,7 +115,7 @@ a.btn { height: 28px; }
 
 .copyright { margin-top: 15px; margin-bottom: 5px; text-align: right; font-size: 12px; }
 .copyright a { color: #159; }
-#page_login .copyright { margin-top: 150px; }
+#page_login .copyright { margin-top: 150px; text-align: center; }
 .loading-icon { color: #000; background: #fff; position: fixed; top: 50%; right: 50%; padding: 20px 50px; border: 1px solid #dedede; border-radius: 5px; line-height: 20px; height: 20px; width: 70px; font-size: 12px; cursor: default; margin: -30px -85px; text-align: center; z-index: 20; animation: showfwin .25s; -webkit-animation: showfwin .25s; -moz-animation: showfwin .25s; box-shadow: #9c9c9c 0 0 100px; box-shadow: rgba(72, 72, 72, 0.3) 0 0 100px; }
 .loading-icon.h { opacity: 0; filter: alpha(opacity=0); _display: none; animation: hidefwin .25s; -webkit-animation: hidefwin .25s; -moz-animation: hidefwin .25s; pointer-events: none; }
 .loading-icon img { padding: 2px 5px 2px 0; float: left; }
