--- a/template/default/style/main.css
+++ b/template/default/style/main.css
@@ -17,7 +17,7 @@ button, input, select, textarea { font-family: inherit; font-size: inherit; }
 button::-moz-focus-inner, input::-moz-focus-inner { border: 0; }
 .hidden { display: none; }
 
-html, body { position: absolute; height: 100%; min-width: 100%; }
+html, body { position: absolute; height: 100%; min-width: 100%; background: #000; }
 .wrapper { position: relative; min-height: 100%; background: #000; }
 
 .wrapper { transition: filter 3s ease; backface-visibility: hidden; }
