--- a/template/default/style/main.css
+++ b/template/default/style/main.css
@@ -18,7 +18,7 @@ button::-moz-focus-inner, input::-moz-focus-inner { border: 0; }
 .hidden { display: none; }
 
 html, body { position: absolute; height: 100% !important; width: 100% !important; background: #000; }
-.wrapper { position: relative; min-height: 100%; background: #000; }
+.wrapper { position: relative; min-height: 100%; background: #fff; }
 
 .wrapper { transition: filter 3s ease; backface-visibility: hidden; }
 .wrapper.blur { -moz-filter: blur(5px); -webkit-filter: blur(5px); -ms-filter: blur(5px); filter: blur(5px); }
