--- a/Template/Misc/Error.htm
+++ b/Template/Misc/Error.htm
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html>
-<php>
-    $code = $instance->getCode() ? $instance->getCode() : '500';
-    $message = $instance->getMessage();
-    $trace = $instance->formatBackTrace();
-</php>
+<php>$code = $instance->getCode() ? $instance->getCode() : '500'</php>
 <head>
     <meta charset="utf-8"/>
     <title>Error - {$code} - {SITE_NAME}</title>
@@ -17,10 +13,10 @@
 <p class="title">{SITE_NAME}</p>
 <div class="box">
     <h2>System Error - <b>{$code}</b></h2>
-    <p class="main selectable">{$message}</p>
+    <p class="main selectable">{$instance->getMessage()}</p>
     <p>We're now fixing this problem, sorry for the inconveniences.</p>
     <if condition="defined('DEBUG_ENABLE') && DEBUG_ENABLE">
-        <pre>BackTrace:<br>{$trace}</pre>
+        <pre>BackTrace:<br>{$instance->formatBackTrace()}</pre>
     </if>
 </div>
 <p class="foot">Powered by KK Framework</p>
