--- a/Template/Demo.htm
+++ b/Template/Demo.htm
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="Resource/Misc/Error.css">
 </head>
 <body>
-<p class="title">{SITE_NAME}</p>
+<p class="title">
+    <i18n key="Program.Title" framework_name="KK-Framework">{SITE_NAME}</i18n>
+</p>
 <div class="box">
-    <h2>Welcome</h2>
-    <p>Welcome to use KK-Framework. El Psy Congroo.</p>
+    <h2><i18n key="Pages.Demo.Title" /></h2>
+    <p><i18n key="Pages.Demo.DemoText" /></p>
 </div>
 <p class="foot">Powered by KK Framework</p>
 <script src="Resource/Demo/test.js"></script>
