--- a/Template/Misc/Error.htm
+++ b/Template/Misc/Error.htm
@@ -12,9 +12,9 @@
 <body>
 <p class="title">{SITE_NAME}</p>
 <div class="box">
-    <h2>System Error - <b>{$code}</b></h2>
+    <h2><i18n key="Error.Title" code="{$code}">System Error - <b>{code}</b></i18n></h2>
     <p class="main selectable">{$instance->getMessage()}</p>
-    <p>We're now fixing this problem, sorry for the inconveniences.</p>
+    <p><i18n key="Error.Tips">We're now fixing this problem, sorry for the inconveniences.</i18n></p>
     <if condition="defined('DEBUG_ENABLE') && DEBUG_ENABLE">
         <pre>BackTrace:<br>{$instance->formatBackTrace()}</pre>
     </if>
