--- a/Template/Misc/Redirect.htm
+++ b/Template/Misc/Redirect.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>System Message - {SITE_NAME}</title>
+    <title><i18n key="Redirect.Title">System Message</i18n> - {SITE_NAME}</title>
     <base href="{BASE_URL}"/>
     <meta name="Robots" content="NOINDEX, NOFOLLOW, NOARCHIVE"/>
     <meta name="ViewPort" content="initial-scale=1, minimum-scale=1, width=device-width"/>
@@ -11,10 +11,10 @@
 <body>
 <p class="title">{SITE_NAME}</p>
 <div class="box">
-    <h2>System Message</h2>
+    <h2><i18n key="Redirect.Title">System Message</i18n></h2>
     <p class="main selectable">{$text}</p>
     <if condition="$link !== null">
-        <p><a class="redirect" href="$link">If you didn't redirect in {$timeout} seconds, please click here</a></p>
+        <p><a class="redirect" href="{$link}"><i18n key="Redirect.CountDown" timeout="{$timeout}">If you didn't redirect in {timeout} seconds, please click here.</i18n></a></p>
         <script type="text/javascript">
             setTimeout(function(){ location.href = '{$link}'; }, $timeout * 1000);
         </script>
