--- a/Resource/Misc/Dialog/Dialog.css
+++ b/Resource/Misc/Dialog/Dialog.css
@@ -26,7 +26,9 @@
 .dialog-content {
     margin: 20px 5px 15px;
     min-height: 36px;
+    max-width: 480px;
     font-size: 14px;
+    line-height: 26px;
 }
 
 .dialog-actions {
