--- a/Template/Member/Login.htm
+++ b/Template/Member/Login.htm
@@ -6,7 +6,7 @@
     <base href="{BASE_URL}"/>
     <meta name="Robots" content="NOINDEX, NOFOLLOW, NOARCHIVE"/>
     <meta name="ViewPort" content="initial-scale=1, minimum-scale=1, width=device-width"/>
-    <link rel="stylesheet" href="Resource/Login.css">
+    <link rel="stylesheet" href="Resource/Member.css">
 </head>
 <body>
     <div class="centre-box">
@@ -14,7 +14,7 @@
             <img src="Resource/Images/Avatar.png"/>
             <h2><i18n key="Member.Login">Login</i18n></h2>
         </div>
-        <div class="login-form">
+        <div class="member-form login">
             <p>
                 <input type="text" name="username" placeholder="#i18n(Member.Username)"/>
             </p>
@@ -28,6 +28,6 @@
             </p>
         </div>
     </div>
-    <script src="Resource/Login.js" async defer></script>
+    <script src="Resource/Member.js" async defer></script>
 </body>
 </html>
