--- a/Template/Dashboard.htm
+++ b/Template/Dashboard.htm
@@ -11,19 +11,19 @@
     <div class="sidebar">
         <div class="sidebar-header">
             <div class="account-info">
-                <img src="//cdn.v2ex.com/gravatar/e466883dea9a8b501f9788066cd021de?s=64" class="avatar"/>
-                <p class="name">kookxiang@gmail.com</p>
+                <if condition="$account">
+                    <img src="{$account->avatar}" class="avatar"/>
+                    <p class="name">{$account->name}</p>
+                </if>
                 <i class="fa fa-caret-down switch-account"></i>
             </div>
             <ul class="account-list">
-                <li>
-                    <img src="//cdn.v2ex.com/gravatar/e466883dea9a8b501f9788066cd021de?s=64" class="avatar"/>
-                    测试用户 1
-                </li>
-                <li>
-                    <img src="//cdn.v2ex.com/gravatar/e466883dea9a8b501f9788066cd021de?s=64" class="avatar"/>
-                    测试用户 2
-                </li>
+                <loop variable="$accounts" value="$account">
+                    <li data-id="{$account->id}">
+                        <img src="{$account->avatar}" class="avatar"/>
+                        {$account->name}
+                    </li>
+                </loop>
                 <li>
                     <i class="fa fa-plus avatar"></i>
                     关联新账号
