--- a/Template/Dashboard.htm
+++ b/Template/Dashboard.htm
@@ -57,7 +57,7 @@
                 <ul class="menu">
                     <li class="sign-out">
                         <i class="fa fa-sign-out"></i>
-                        退出
+                        <i18n key="Member.Logout">Logout</i18n>
                     </li>
                 </ul>
             </div>
