Add .eslintrc && rewrite dialog

--- a/Resource/Misc/Dialog/Dialog.ejs
+++ b/Resource/Misc/Dialog/Dialog.ejs
@@ -6,10 +6,10 @@
         <%= Config.Content %>
     </div>
     <% if (Config.Actions.length > 0) { %>
-    <div class="dialog-actions">
-        <% Config.Actions.forEach(function(action){ %>
-        <button <% if (action.Action) { %> data-action="<%= action.Action %>" <% } %><% if (action.Default) { %> class="default"<% } %>><%= action.Label %></button>
-        <% }); %>
-    </div>
+        <div class="dialog-actions">
+            <% Config.Actions.forEach(function(action){ %>
+                <button <% if (action.Action) { %> data-action="<%= action.Action %>" <% } if (action.Default) { %> class="default" <% } %>><%= action.Label %></button>
+            <% }); %>
+        </div>
     <% } %>
 </div>
